--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-preset-stage-2": "^6.13.0",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.28.0",
+    "mobx": "^3.1.7",
+    "mobx-react": "^4.1.3",
     "postcss-loader": "^0.9.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.3",
